src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision2.stderr
error: unexpected token: `]`
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:17
   |
LL |         [_, 99..] => {},
   |                 ^

error: aborting due to previous error

